fixing all component align

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,3 +1,6 @@
+.search-form{
+  margin: auto;
+}
 input {
     font-family: 'Roboto', sans-serif;
   color: #333;
