--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,13 @@
   font-size: 62,5%;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background: #171a21;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
 }
